# firecrawl-blueprint

./: Cargo.toml  docker-compose.yaml  flake.nix  generate_mcp_yaml.py  system_prompt.md
.roo/: system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator
firecrawl-blueprint-bin/: Cargo.toml  build.rs
firecrawl-blueprint-bin/src/: main.rs
firecrawl-blueprint-lib/: Cargo.toml
firecrawl-blueprint-lib/src/: context.rs  lib.rs
firecrawl-blueprint-lib/src/jobs/: batch_scrape.rs  crawl.rs  map.rs  mod.rs  scrape.rs
firecrawl-blueprint-lib/tests/: e2e.rs
memory-bank/: activeContext.md  decisionLog.md  folder-architecture.md  import-paths.md  productContext.md  progress.md  smart-contracts.md  systemPatterns.md
