[package]
name = "firecrawl-blueprint-blueprint-lib"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }         # Added rt-multi-thread for reqwest
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ipfs-api = { workspace = true }
ipfs-api-backend-hyper = { workspace = true }                                # Explicitly add backend
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }                                                   # Already used in context.rs, ensure it's workspace dep
bollard = { workspace = true }                                               # Already used in context.rs, ensure it's workspace dep
[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle"] }
tokio = { workspace = true, features = ["macros"] }
color-eyre = { workspace = true }
